Bug 1053275 - Exempt ServiceWorkers from per domain thread limits. r=sicking